syntax = "proto3";

option go_package = "./grpc";

package grpc;

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse) {}
  rpc StreamAllUsers(NoParam) returns (stream UserResponse) {}
  rpc FetchStreamResponse(stream UserRequest) returns (UserList) {}
  rpc GetUsersBidirectionalStream(stream UserRequest) returns (stream UserResponse) {}
}

message NoParam {}

message UserRequest {
    string id = 1;
}

message UserResponse {
    string name = 1;
    int32 age = 2;
    string id = 3;
}

message UserList {
    repeated UserResponse users = 1;
}